# hodl_box_mono

./: README.md
hodl_agent/: .env.example  .gitignore  README.md  analysis_result.md  api.py  main.py  pyproject.toml  simple_test.py  test_agents.py  test_api.py
hodl_agent/agents/: __init__.py  base_agent.py  dca_agent.py  mental_support_agent.py  swap_agent.py
hodl_agent/agents/tools/: __init__.py  contract_tools.py  market_tools.py  swap_tools.py
hodl_contract/: .env.example  .gitignore  README.md  hardhat.config.js  package-lock.json  package.json
hodl_contract/contracts/: HodlBoxUniversalApp.sol
hodl_contract/scripts/: deploy.js  interact.js
hodl_contract/test/: HODLBox.test.js
hodl_web/: .gitignore  README.md  package.json  tailwind.config.ts
hodl_web/src/app/: layout.tsx  page.tsx  providers.tsx
